cabal-version: 3.0
name:          haskell-htmx
version:       0.1
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       Apache-2.0
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/haskell-htmx

common common
  build-depends:
    , base   <5
    , bytestring
    , serialise
    , scotty
    , scotty-cookie
    , warp
    , uuid
    , aeson
    , text

  default-language: GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods -threaded -rtsopts
    -with-rtsopts=-T

executable haskell-htmx
  import:  common
  main-is: Main.hs
  other-modules: Sessions.Store
